[gd_scene load_steps=5 format=3 uid="uid://cya8tdk3metyd"]

[ext_resource type="Script" path="res://cone/cone.gd" id="1_1a6dq"]
[ext_resource type="Texture2D" uid="uid://cjv37ybfw12tc" path="res://cone/Kolba.png" id="1_t7adc"]
[ext_resource type="Texture2D" uid="uid://dt7f2pj8pmsoo" path="res://cone/Kolba_2.png" id="3_qvicx"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_flm43"]
size = Vector2(50, 201)

[node name="Cone" type="Node2D"]
script = ExtResource("1_1a6dq")

[node name="TouchScreenButton" type="TouchScreenButton" parent="."]
position = Vector2(-25, -100)
texture_normal = ExtResource("1_t7adc")

[node name="Blood1" type="Polygon2D" parent="."]
visible = false
position = Vector2(0.0285726, 0)
scale = Vector2(1.05714, 1)
color = Color(1, 0.184314, 0, 1)
polygon = PackedVector2Array(-18, -89, -18, -43, 17.9459, -43, 17, -89)

[node name="Blood2" type="Polygon2D" parent="."]
visible = false
position = Vector2(1.86265e-09, 46)
scale = Vector2(1.05714, 1)
color = Color(1, 0, 1, 1)
polygon = PackedVector2Array(-18, -89, -17.973, -42, 17.973, -42, 17.973, -89)

[node name="Blood3" type="Polygon2D" parent="."]
visible = false
position = Vector2(1, 93)
scale = Vector2(1.05714, 1)
color = Color(0, 1, 1, 1)
polygon = PackedVector2Array(-18, -89, -17.973, -43, 17.027, -43, 17, -89)

[node name="Blood4" type="Polygon2D" parent="."]
visible = false
position = Vector2(1, 139)
scale = Vector2(1.11755, 1)
color = Color(0, 0, 0, 1)
polygon = PackedVector2Array(-17.0015, -89, -17.0015, -57, -14.317, -48, -8.94814, -43, -3.57925, -42, -0.894814, -42, 2.68444, -42, 6.2637, -43, 11.6326, -48, 14.317, -52, 17.0015, -57, 16.1066, -89)

[node name="SpriteCone" type="Sprite2D" parent="."]
texture = ExtResource("1_t7adc")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_flm43")

[node name="Sprite2D" type="Sprite2D" parent="."]
visible = false
position = Vector2(0.5, 0)
scale = Vector2(1.02, 1)
texture = ExtResource("3_qvicx")

[connection signal="pressed" from="TouchScreenButton" to="." method="_on_touch_screen_button_pressed"]
[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
